--- a/views/edit-news.ejs
+++ b/views/edit-news.ejs
@@ -1,21 +1,21 @@
 <% extend('cmslayout') %>
 
-<form action="/news" method="post">
+<form action="/news/update/<%= news._id %>" method="post">
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
                 <label for="title">Title</label> :
-                <input type="text"  class="form-control" name="title"> <br>
+                <input type="text"  class="form-control" name="title" value="<%= news.title %>"> <br>
             </div>
 
             <div class="form-group">
                 <label for="short_description">Short Description</label> : <br>
-                <input type="text" name="short_description" class="form-control">
+                <input type="text" name="short_description" class="form-control" value="<%= news.short_description %>">
             </div>
 
             <div class="form-group">
                 <label for="author">Author</label> : <br>
-                <input type="text" class="form-control"  name="author"> <br>
+                <input type="text" class="form-control"  name="author" value="<%= news.author %>"> <br>
             </div>
 
         </div>
@@ -23,14 +23,14 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label for="description">Description</label> : <br>
-                <textarea name="description" class="form-control" cols="30" rows="10"></textarea> <br>
+                <textarea name="description" class="form-control" cols="30" rows="10"><%= news.description %></textarea> <br>
             </div>
         </div>
 
     </div>
 
     <div class="form-group">
-        <input type="submit" class="btn btn-primary" value="Add">
+        <input type="submit" class="btn btn-primary" value="update">
     </div>
 
 </form>
